--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
+-e .
+# -e, --editable <path/url>
+# Install a project in editable mode (i.e. setuptools "develop mode")
+# from a local project path or a VCS url
+
+# python setup.py develop
+# 실제로 site-packages 폴더에 설치되는 대신 .egg-link 라는, 프로젝트 소스 코드를 링킹해주는 파일을 생성
+# 소스코드를 수정할 때마다 즉시 반영
+# 그럼 왜 따로 requirements.txt를 두는가?
+
 pytest~=7.1.3
 pytest-mock~=3.8.2
+pytest-cov~=4.0.0
 tox~=3.26.0
+
+# Pip install -U pip tox
+# -U : Upgrade all specified packages to the newest available version.
+# The handling of dependencies depends on the upgrade-strategy used
