--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,54 @@
 [tox]
-# isolated_build = True
-envlist = py38
+# tox global settings
+
+# 유무에 따라 뭐가 다른거지?
+# pyproject가 있고 skipsdist가 false일 때 isolated_build가 true여야한다고 함 (PEP 517)
+isolated_build = false
+# 패키징 스킵 (running an sdist)
+# setup.py 없이 tox 명령어 가능. 대신 commands에서 이를 고려해야함
+skipsdist = true
+# 전역으로 여러개의 python version에 대해서 실행
+envlist = py38 #, py39
+
+
+[gh-actions]
+python =
+    3.8: py38
+#    3.9: py39
+
 [testenv]
+# Test environments
+
 # install testing framework
 # ... or install anything else you might need here
 deps = pytest
 # run the tests
 # ... or run any other command line tool you need to run here
-commands = pytest
+commands = pytest -vv
+
+[testenv:ci]
+# testenv:{NAME}
+# tox -e ci
+# tox 명령어 시 이 env도 실행되는가? -> 분명 됐었는데 또 안하네
+
+# legacy; basepython으로 해야하는가?
+# basepython = python3.8
+python =
+    3.8: py38
+# install requirements.txt
+deps =
+     -r requirements.txt
+# {posargs}, {posargs:DEFAULT}
+# e.g. {posargs:--with-coverage}
+# after the -- will be substituted everywhere where you specify {posargs}
+# tox -- -x tests/test_something.py
+# -x : exit instantly on first error or failed test
+commands =
+    pytest -vv --cov tanker --cov-report term --cov-report xml {posargs}
+
+# command name 사용가능하도록 함
+# whitelist_externals = poetry
+# -E test extra도 설치
+# commands =
+#     poetry install -E test
+#     poetry run pytest
