set required lib

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,8 @@ python =
 
 # install testing framework
 # ... or install anything else you might need here
-deps = pytest
+deps =
+    -r requirements.txt
 # run the tests
 # ... or run any other command line tool you need to run here
 commands = pytest -vv
@@ -37,7 +38,7 @@ python =
     3.8: py38
 # install requirements.txt
 deps =
-     -r requirements.txt
+    -r requirements.txt
 # {posargs}, {posargs:DEFAULT}
 # e.g. {posargs:--with-coverage}
 # after the -- will be substituted everywhere where you specify {posargs}
